# simple_date_parser

./: LICENSE  README.html  README.md  README.rst  examples.py  parse_date.py  setup.cfg  test_parse_date.py
parse_date/: parse_date.py
