[metadata]
name = parse-date
version = 0.0.2
description = Derive one or more valid datetime.date object(s) from an input string representing a single date, allowing for ambiguity.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elliot-100/simple_date_parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = parse_date
python_requires = >=3.8